--- a/absolute.html
+++ b/absolute.html
@@ -8,6 +8,9 @@
       .absolutediv {
         position: absolute;
         border: 1px solid lightblue;
+         background-color: yellow;
+        padding: 50px;
+        font-size: 20px;
       }
       .relativediv {
         margin-top: 30px;
