--- a/fixed.html
+++ b/fixed.html
@@ -7,6 +7,8 @@
     <style>
       .fixdiv {
         position: fixed;
+         padding: 50px;
+        font-size: 20px;
       }
     </style>
   </head>
