--- a/relative.html
+++ b/relative.html
@@ -8,6 +8,9 @@
       .relativediv {
         position: relative;
         border: 1px solid lightblue;
+        background-color: yellow;
+        padding: 50px;
+        font-size: 20px;
       }
     </style>
   </head>
