--- a/static.html
+++ b/static.html
@@ -7,6 +7,9 @@
     <style>
       .staticdiv {
         position: static;
+        background-color: yellow;
+        padding: 50px;
+        font-size: 20px;
         border: 1px dotted lightgray;
       }
     </style>
