--- a/absolute.html
+++ b/absolute.html
@@ -7,10 +7,14 @@
     <style>
       .absolutediv {
         position: absolute;
-        border: 1px solid lightblue;
-         background-color: yellow;
+        background-color: yellow;
         padding: 50px;
         font-size: 20px;
+        border: 1px solid lightblue;
+        top: 80px;
+        right: 0;
+        width: 200px;
+        height: 100px;
       }
       .relativediv {
         margin-top: 30px;
