--- a/fixed.html
+++ b/fixed.html
@@ -7,13 +7,16 @@
     <style>
       .fixdiv {
         position: fixed;
-         padding: 50px;
+        color: green;
+        padding: 50px;
         font-size: 20px;
       }
     </style>
   </head>
   <body>
-    <div class="fixdiv"><h1>Defenition of fixed property</h1></div>
+    <div class="fixdiv"><h3>This element is fixed in its position</h3></div>
+
+    <h1>Defenition of fixed property</h1>
     <h2>
       IF you allot one specific location top,left, bottom, or right they are not
       affected by scrolling
