--- a/index.html
+++ b/index.html
@@ -4,28 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Position properties</title>
+    <style>
+      a {
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
-    <div class="absolute">
-      <a href="./absolute.html" target="_blank"
-        >Absolute defenition and example</a
-      >
-    </div>
-    <div class="relative">
-      <a href="./relative.html" target="_blank"
-        >Relative property defention and example</a
-      >
-    </div>
-    <div class="static">
-      <a href="./static.html" target="_blank"
-        >Static property defention and example</a
-      >
-    </div>
-    <div class="fixed">
-      <a href="./fixed.html" target="_blank">Fixed defention and example</a>
-    </div>
-    <div class="sticky">
-      <a href="./sticky.html" target="_blank">Sticky defention and example</a>
-    </div>
+    <h1>Defenition of various css position properties in CSS</h1>
+    <ul>
+      <li>
+        <a href="./static.html" target="_blank"
+          >Static property defention and example</a
+        >
+      </li>
+      <li>
+        <a href="./absolute.html" target="_blank"
+          >Absolute defenition and example</a
+        >
+      </li>
+      <li>
+        <a href="./relative.html" target="_blank"
+          >Relative property defention and example</a
+        >
+      </li>
+      <li>
+        <a href="./fixed.html" target="_blank">Fixed defention and example</a>
+      </li>
+      <li>
+        <a href="./sticky.html" target="_blank">Sticky defention and example</a>
+      </li>
+    </ul>
   </body>
 </html>
