--- a/relative.html
+++ b/relative.html
@@ -10,6 +10,8 @@
         border: 1px solid lightblue;
         background-color: yellow;
         padding: 50px;
+        width: 400px;
+        height: 200px;
         font-size: 20px;
       }
     </style>
