--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Position properties</title>
     <style>
+      h1{color:blueviolet;}
       a {
         text-decoration: none;
       }
@@ -14,25 +15,25 @@
     <h1>Defenition of various css position properties in CSS</h1>
     <ul>
       <li>
-        <a href="./static.html" target="_blank"
+        <a href="./static.html" 
           >Static property defention and example</a
         >
       </li>
       <li>
-        <a href="./absolute.html" target="_blank"
+        <a href="./absolute.html" 
           >Absolute defenition and example</a
         >
       </li>
       <li>
-        <a href="./relative.html" target="_blank"
+        <a href="./relative.html" 
           >Relative property defention and example</a
         >
       </li>
       <li>
-        <a href="./fixed.html" target="_blank">Fixed defention and example</a>
+        <a href="./fixed.html" >Fixed defention and example</a>
       </li>
       <li>
-        <a href="./sticky.html" target="_blank">Sticky defention and example</a>
+        <a href="./sticky.html" >Sticky defention and example</a>
       </li>
     </ul>
   </body>
