--- a/absolute.html
+++ b/absolute.html
@@ -23,7 +23,8 @@
     </style>
   </head>
   <body>
-    <div class="absolutediv">Example of Absolute property</div>
+    <div class="absolutediv">Example of Absolute property it is in the position top: 80px;
+        right: 0;</div>
     <div class="relativediv">
       <h1>Defenition of Absolute property</h1>
       <ul>
